# wick

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  benchmark_results.csv  diff.txt  format_deltas.py  justfile  llama_time.txt  pr_comments.txt  rust-toolchain.toml  wick_time.txt
.cargo/: config.toml
.claude/memory/: feedback_critical_review_multiple.md  feedback_no_sed_on_files.md
.github/workflows/: ci.yml  code-review.yml
benchmarks/: cache_compare.md  cache_compare.sh  deltas_table.md  profile_longctx.md  results_table.md
benchmarks/profile_longctx_raw/: 16b_wall_p128.stderr  16b_wall_p4096.stderr  450m_decode_ctx128.stderr  450m_decode_ctx2048.stderr  450m_decode_ctx4096.stderr  450m_noattn_p1024.stderr  450m_noattn_p128.stderr  450m_noattn_p4096.stderr  450m_wall_p1024.stderr  450m_wall_p128.stderr  450m_wall_p4096.stderr  batched_prefill_all.stderr  batched_prefill_all.stdout
devlog/: 000001-scaffold.md  000002-feature-tensor-cpu-compute.md  000003-docs-implementation-plan.md  000004-feature-lfm2-forward.md  000005-fix-tokenizer-pretokenize.md  000006-perf-q4-0-simd.md  000007-perf-batched-prefill.md  000008-perf-neon-attention.md  000009-perf-gemm-tuning.md  000010-feature-gpu-backend.md  000011-feat-audio.md  000011-feat-turboquant-kv-cache.md  000012-perf-blas-prefill.md  000013-perf-flash-attention.md  000014-perf-cpu-decode.md  000015-perf-kv-ring.md  000016-perf-split-k-review-fixes.md  000017-perf-profile-longctx.md  000018-perf-profile-instrumentation.md  000019-perf-tiled-flash-attn.md
devlog/plans/: 000001-01-scaffold.md  000002-01-tensor-cpu-compute.md  000003-01-pr2-review-fixes.md  000004-01-lfm2-forward-pass.md  000011-01-turboquant-kv-cache.md  000012-01-blas-prefill.md  000013-01-flash-attention.md  000015-01-kv-cache-preallocation.md  000018-01-prefill-profile-instrumentation.md  000019-01-tiled-flash-attention.md
docs/: IMPLEMENTATION_PLAN.md
scripts/: bench_matrix.sh  benchmark_matrix.py  compare_tokenizer.py  format_baseline_md.py  format_results.py  profile_longctx.sh
wick/: Cargo.toml
wick-cli/: Cargo.toml
wick-cli/src/: chat_tui.rs  image_source.rs  main.rs  signal.rs
wick-ffi/: Cargo.toml  README.md  build.rs
wick-ffi/bindings/kotlin/uniffi/wick_ffi/: wick_ffi.kt
wick-ffi/bindings/swift/: wick_ffi.swift  wick_ffiFFI.h  wick_ffiFFI.modulemap
wick-ffi/src/: lib.rs
wick-ffi/tests/swift/: main.swift
wick-parity/: Cargo.toml  README.md
wick-parity/legs/kotlin/: build.gradle.kts  settings.gradle.kts
wick-parity/legs/kotlin/src/main/kotlin/com/hyeonslab/wickparity/: Main.kt
wick-parity/legs/swift/: Package.swift  README.md
wick-parity/legs/swift/Sources/WickParitySwift/: main.swift  wick_ffi.swift
wick-parity/legs/swift/Sources/wick_ffiFFI/: module.modulemap  wick_ffiFFI.h
wick-parity/src/: lib.rs  main.rs
wick-parity/tests/: parity.rs  parity_kotlin.rs  parity_swift.rs
wick-wasm/: .gitignore  Cargo.toml  README.md
wick-wasm/src/: lib.rs
wick/schema/: kv_cache.fbs
wick/src/: audio_engine.rs  engine.rs  gguf.rs  kv_cache.rs  lib.rs  manifest.rs  par.rs  quant.rs  safetensors.rs  sampler.rs  session.rs  tensor.rs  time.rs  tokenizer.rs  turboquant.rs
wick/src/backend/: blas.rs  cpu.rs  metal.rs  mod.rs  simd.rs  wgpu.rs  wgsl_pp.rs
wick/src/backend/shaders/: argmax_f32.metal  argmax_f32.wgsl  attention.metal  attention.wgsl  attention_gqa.metal  attention_prefill.metal  attention_prefill.wgsl  attention_splitk.metal  common_decls.tmpl  conv1d.metal  conv1d.wgsl  conv1d_fused.metal  conv1d_fused.wgsl  conv1d_fused_batch.metal  elementwise.metal  elementwise.wgsl  flash_attention.metal  gemm_q4_0.metal  gemm_q8_0.metal  gemm_q8_0.wgsl  gemv_f16.metal  gemv_f32.metal  gemv_f32.wgsl  gemv_q4_0.metal  gemv_q4_0.wgsl  gemv_q4_0_batch.metal  gemv_q4_0_fast.metal  gemv_q4_0_fast.wgsl  gemv_q6_k.metal  gemv_q6_k.wgsl  gemv_q8_0.metal  gemv_q8_0.wgsl  gemv_q8_0_batch.metal  kv_shift.metal  mul_mat_decls.tmpl  mul_mat_reg_tile.wgsl  per_head_rmsnorm.metal  per_head_rmsnorm.wgsl  qk_norm_rope.metal  qk_norm_rope_batch.metal  (+9 more)
wick/src/bundle/: download.rs  mod.rs
wick/src/model/: audio_decoder.rs  audio_encoder.rs  audio_preprocessor.rs  gpu_lfm2.rs  lfm2.rs  lfm2.rs.orig  lfm2.rs.rej  llama.rs  metal_audio_decoder.rs  metal_lfm2.rs  mod.rs  vision_encoder.rs  vision_preprocessor.rs  weights.rs
wick/tests/: attention_metal_parity.rs  bench_conv2d.rs  bench_perf.rs  blas_correctness.rs  blas_parity.rs  bundle_download.rs  bundle_from_id.rs  cancel_mid_prefill.rs  depthformer_sensitivity.rs  depthformer_smoke.rs  detok_bypass.rs  detok_metal_parity.rs  detokenize_smoke.rs  embedding_roundtrip.rs  engine_load.rs  frame2_codes.rs  gemv_q4_0_bench.rs  layer0_compare.rs  list_bundles_live.rs  llm_layer0_compare.rs  manifest_parse.rs  metal_shaders_parity.rs  n_keep_shift.rs  quality_gate.rs  sample_frame_smoke.rs  session_chain.rs  shift_real_model.rs  single_token_attn.rs  vl_bundle_load.rs  vl_clip_parity.rs  vocoder_load.rs
wick/tests/common/: download.rs  mod.rs
wick/tests/fixtures/: README.md
wick/tests/fixtures/audio/: README.md  generate.sh
wick/tests/fixtures/manifests/: audio.json  text.json  unknown.json  vl.json
