[workspace]
members = ["wick", "wick-cli"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"  # minimum; edition 2024 requires 1.85+
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytemuck = { version = "1", features = ["derive"] }
byteorder = "1"
half = { version = "2", features = ["bytemuck"] }
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
wgpu = "24"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
