[workspace]
members = ["wick", "wick-cli", "wick-ffi", "wick-parity"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"  # minimum; edition 2024 requires 1.85+
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytemuck = { version = "1", features = ["derive"] }
byteorder = "1"
half = { version = "2", features = ["bytemuck"] }
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
regex = "1"
rayon = "1"
wgpu = "24"
pollster = "0.4"
metal = "0.31"
objc = "0.2"
rustfft = "6.4"
flatbuffers = "25"
tempfile = "3"
# BLAS bindings for SGEMM on CPU prefill. On macOS the `accelerate-src` provider
# dispatches through Apple's Accelerate framework (unlocking the AMX matrix unit);
# on Linux the `openblas-src` provider pulls in OpenBLAS. Gated behind the `blas`
# feature in the wick crate so non-BLAS builds still work via the NEON integer path.
cblas-sys = "0.1"
accelerate-src = "0.3"
openblas-src = { version = "0.10", features = ["system"] }
# Optional HTTP + hashing for the `remote` feature (BundleRepo downloader).
# Kept OpenSSL-free via rustls-tls so cross-compile (wasm, android, iOS)
# stays straightforward.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
# UniFFI for multi-language bindings (wick-ffi crate). Version pinned to
# a 0.31.x series — bindings are ABI-stable within a minor.
uniffi = "0.31"
# wasm32-unknown-unknown portability deps (Phase 3 of the FFI multi-target
# initiative). Pinned to versions paired with the corresponding native
# transitive deps:
#   - `getrandom 0.2` is what `rand 0.8` (above) pulls in. The `js` feature
#     routes wasm builds through `crypto.getRandomValues`. Bumping `rand`
#     to 0.9+ requires bumping this to `getrandom 0.3` and using the
#     `wasm_js` feature instead — they're not interchangeable.
#   - `web-time 1` is the standard `std::time::{Instant, Duration}` shim
#     for wasm32-unknown-unknown (where `std::time::Instant` compiles
#     since Rust 1.74 but panics at runtime). Used by `wick::time` to
#     give the lib a single Instant type that works on both targets.
getrandom = "0.2"
web-time = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
