[package]
name = "wick-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for the Wick LLM inference engine"

[[bin]]
name = "wick"
path = "src/main.rs"

[dependencies]
# `remote` enables `BundleRepo` + `WickEngine::from_bundle_id`, which the CLI's
# `--bundle-id` / `--quant` flags route through. Pulls reqwest + rustls + sha2
# (~30 deps) but that's the cost of HTTP-cached bundle downloads.
wick = { path = "../wick", features = ["remote"] }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
gpu = ["wick/gpu"]
metal = ["wick/metal"]
blas = ["wick/blas"]
