[package]
name = "wick-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for the Wick LLM inference engine"

[[bin]]
name = "wick"
path = "src/main.rs"

[dependencies]
# `remote` enables `BundleRepo` + `WickEngine::from_bundle_id`, which the CLI's
# `--bundle-id` / `--quant` flags route through. Pulls reqwest + rustls + sha2
# (~30 deps) but that's the cost of HTTP-cached bundle downloads.
wick = { path = "../wick", features = ["remote"] }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# `/image` and `--image` accept `http(s)://` URLs in addition to filesystem
# paths; reqwest::blocking handles the fetch. Already in the build via
# `wick/remote`'s `BundleRepo`, but listed directly so the CLI's HTTP support
# doesn't depend on whichever transitive feature happens to enable it.
reqwest.workspace = true
# Terminal UI for `wick chat`. Auto-engaged when stdin+stdout are TTYs;
# `--no-tui` falls back to the line-based REPL. crossterm is ratatui's
# default backend on macOS / Linux / Windows.
ratatui = "0.29"
crossterm = "0.28"
# Accurate column-width count for the TUI input cursor (CJK / emoji).
# Tiny dep — just a static `char → width` table.
unicode-width = "0.2"

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
gpu = ["wick/gpu"]
metal = ["wick/metal"]
blas = ["wick/blas"]
