[package]
name = "wick-ffi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "UniFFI bindings for wick — exposes the core inference engine to Kotlin, Swift, Python, etc."

[lib]
# - `cdylib` for Android / Linux / macOS dynamic linking (UniFFI loadBundle at runtime).
# - `staticlib` for iOS (XCFramework static archive, Swift Package Manager).
# - `lib` stays so other Rust crates in the workspace (future parity
#   harness, examples) can depend on the crate as a normal library.
crate-type = ["lib", "cdylib", "staticlib"]

# Binding-generation binary. Runs `uniffi::uniffi_bindgen_main()` so the
# standard `uniffi-bindgen generate --library <dylib> --language <lang>`
# CLI is available in-repo. Invoked from `just bindings` + CI; see
# `wick-ffi/README.md`.
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
# `tokio` feature activates the `async_runtime = "tokio"` export path
# — required for the `async fn` methods on `Session` that offload the
# synchronous decode loop to a blocking worker.
# `cli` feature gates `uniffi::uniffi_bindgen_main()` — the entry point
# used by the `uniffi-bindgen` binary target above. Without it the
# binary won't compile in 0.31 (the CLI scaffolding moved behind the
# feature flag so library-only consumers don't pay for clap etc.).
uniffi = { workspace = true, features = ["tokio", "cli"] }
# `FfiError` derives `thiserror::Error` so `WickError` messages can
# flow through the FFI boundary unchanged. Already a workspace dep.
thiserror.workspace = true
# Async runtime for `#[uniffi::export(async_runtime = "tokio")]`.
# `rt` for the runtime core, `rt-multi-thread` so `spawn_blocking`
# dispatches decode work onto a dedicated blocking worker thread
# instead of the runtime's async worker pool. `default-features = false`
# is currently a no-op (tokio 1.x defaults to empty) but makes the
# intent explicit and defends against a future tokio adding defaults.
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread"] }
# wick: default features for the core surface we expose. The `remote`
# feature lights up when `BundleRepo` surfaces through FFI (a later
# PR); keeps the dep tree small for now.
wick = { path = "../wick" }

[dev-dependencies]
# Full tokio feature set for `#[tokio::test]` so the async unit tests
# get a runtime + macro expansion. Kept dev-only — non-test builds
# stay minimal.
tokio = { version = "1", features = ["full"] }

# No `[build-dependencies]` block: the proc-macro path doesn't need
# UDL-scaffolding generation at build time, so `uniffi = { features =
# ["build"] }` as a build-dep would compile UniFFI twice for no gain.
# If/when we migrate to UDL, add `uniffi = { workspace = true,
# features = ["build"] }` here and call `uniffi::generate_scaffolding`
# from `build.rs`.
