[package]
name = "wick-parity"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Parity harness for wick — runs the same prompt through every binding leg and byte-compares token streams against a Rust reference."

[lib]
# Plain `lib` — future Kotlin-via-JNA / Swift-via-UniFFI legs may want
# to reuse `RunArgs` / `default_cache_dir` without paying for a
# subprocess hop. Keeping the bin separate from the lib means each
# leg can choose how it wants to integrate.
name = "wick_parity"
path = "src/lib.rs"

[[bin]]
name = "wick-parity"
path = "src/main.rs"

[dependencies]
# `wick-ffi` already pulls `wick` with `features = ["remote"]`
# unconditionally, so feature unification means `from_bundle_id` is
# always available across this workspace dep graph. No separate
# `remote` feature on `wick-parity` itself — would just be ceremony.
wick = { path = "../wick" }
wick-ffi = { path = "../wick-ffi" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
