[package]
name = "wick-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "wasm-bindgen browser/Node bindings for the wick inference engine"

[lib]
# `cdylib` produces the `.wasm` artifact that wasm-bindgen-cli post-
# processes into JS glue. `rlib` is kept so this crate can also be
# linked into native test binaries (none today, but cheap to leave on
# and future-proofs against `wasm-bindgen-test --node` runners that
# need both shapes).
crate-type = ["cdylib", "rlib"]

[dependencies]
# wick is consumed with default features off — none of the current
# exports need mmap / parallel / std-fs / disk-cache. Future engine /
# session wrappers (Phase 3.x) will turn on the features they need
# rather than dragging the desktop default-set into wasm builds.
wick = { path = "../wick", default-features = false }
wasm-bindgen.workspace = true
# Used only by the JsError mapping helper to format wick's anyhow-typed
# errors with `{:#}` (full chain). No native heuristics or backtraces;
# wasm builds get the same compact `e: cause: …` output JS callers
# can render.
anyhow.workspace = true

[package.metadata.docs.rs]
# docs.rs runs on linux x86_64 by default, which would skip the
# `cfg(target_arch = "wasm32")` lib-level guard and produce empty
# docs. Pin docs.rs to wasm32 so the wrapper surface actually
# renders.
targets = ["wasm32-unknown-unknown"]
