[package]
name = "wick-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "wasm-bindgen browser/Node bindings for the wick inference engine"
# wasm-pack reads this and packages the listed files into pkg/.
# The LICENSE-* entries are symlinks to the workspace-root copies
# so we don't duplicate the text on disk; npm and git both follow
# the symlinks transparently. The README is generated as
# `pkg/README.md` (wasm-pack copies the crate's own README into
# the pkg/), so we don't list it here ã wasm-pack handles it.
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[lib]
# `cdylib` produces the `.wasm` artifact that wasm-bindgen-cli post-
# processes into JS glue. `rlib` is kept so this crate can also be
# linked into native test binaries (none today, but cheap to leave on
# and future-proofs against `wasm-bindgen-test --node` runners that
# need both shapes).
crate-type = ["cdylib", "rlib"]

[dependencies]
# wick is consumed with default features off ã none of the current
# exports need mmap / parallel / std-fs / disk-cache. Future engine /
# session wrappers (Phase 3.x) will turn on the features they need
# rather than dragging the desktop default-set into wasm builds.
wick = { path = "../wick", default-features = false }
wasm-bindgen.workspace = true
# Used only by the JsError mapping helper to format wick's anyhow-typed
# errors with `{:#}` (full chain). No native heuristics or backtraces;
# wasm builds get the same compact `e: cause: ãÎ` output JS callers
# can render.
anyhow.workspace = true
# `js_sys::Function` (token-streaming callback arg type) and
# `js_sys::Uint32Array` (copying token batches into JS-owned memory
# for the `on_text_tokens` trampoline). Already a transitive dep of
# wasm-bindgen; declared here because we use the public types.
js-sys = "0.3"

[package.metadata.docs.rs]
# docs.rs runs on linux x86_64 by default, which would skip the
# `cfg(target_arch = "wasm32")` lib-level guard and produce empty
# docs. Pin docs.rs to wasm32 so the wrapper surface actually
# renders.
targets = ["wasm32-unknown-unknown"]

# wasm-pack profile config (consumed by `wasm-pack build --release`).
#
# `-O3` over `-Oz`: this is an inference engine, hot-loop perf matters
# more than minimum download size, and `-Oz` can cost ~5% on tight
# numerical loops. `-O3` still cuts the binary ~50% from the LTO-only
# baseline.
#
# Feature flags enable wasm proposals that modern wasm-bindgen +
# rustc emit by default:
#   - `--enable-sign-ext`           ã i32/i64 sign-extension ops
#   - `--enable-bulk-memory`        ã `memory.copy` / `memory.fill`
#   - `--enable-mutable-globals`    ã required by `getrandom/js`
#   - `--enable-nontrapping-float-to-int` ã saturating floatãint
#   - `--enable-reference-types`    ã `externref` (used by JS interop)
# All five are universally supported in browsers + Node since
# late-2020 builds; without them, wasm-opt refuses the wasm-bindgen
# input as "non-MVP". Pin them here so local + CI builds stay in
# sync.
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    '-O3',
    '--enable-sign-ext',
    '--enable-bulk-memory',
    '--enable-mutable-globals',
    '--enable-nontrapping-float-to-int',
    '--enable-reference-types',
]
